Fixing Navbar button positioning
Client Direct’s navbar button was way too close to center when it
should be right-side, so I added CSS for both online sponsoring (to
override) and main style.css to fix this

--- a/styles/online_sponsoring/style.css
+++ b/styles/online_sponsoring/style.css
@@ -137,6 +137,12 @@ background-color: #1cc3d6;
 border-radius: 0px;
 }
 .navbar-toggle,
+.navbar-nav>li>a:hover,
+.navbar-nav>li>a:focus,
+.navbar-nav>li.active>a {
+  margin-right: 15px;
+}
+.navbar-toggle,
 .navbar-toggle:hover,
 .navbar-toggle:focus {
   background: transparent;
