--- a/styles/style.css
+++ b/styles/style.css
@@ -221,6 +221,7 @@ h2 {
   color: #fff;
   background-color: #95519E;
   border-color: #85418E;
+  margin-right: 0px;
 }
 .navbar-toggle .icon-bar {
   background-color: #fff;
